have ajax interacting correctly

--- a/CapStone/Views/Import/Edit.cshtml
+++ b/CapStone/Views/Import/Edit.cshtml
@@ -23,6 +23,10 @@
 
 
 
+    <form id="update">
+        <button type="submit">Remove Duplicates</button>
+    </form>
+   
     <form id="viewTable">
 
 
@@ -74,9 +78,9 @@
         <button type="submit">Search</button>
     </form>
 
-    @Html.ActionLink("Finished","Add","Import")
+    @Html.ActionLink("Finished", "Add", "Import")
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="~/Scripts/app.js"></script>
 </body>
 </html>
