--- a/CapStone/Views/Import/Index.cshtml
+++ b/CapStone/Views/Import/Index.cshtml
@@ -34,7 +34,9 @@
                             <br />
                             <span style="color:red;">
                                 @ViewBag.Message
+
                             </span>
+                            @Html.ActionLink("Finished", "Edit", "Import")
                         </div>
                     </div>
                     
