--- a/CapStone/Views/Import/Index.cshtml
+++ b/CapStone/Views/Import/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Import Employees</h2>
+<h2>Import </h2>
 
 <div class="container">
     <div class="tab-content">
